--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Class Selection Page</h1>
     <div class="container-row">
         <div id="data" class="sel-left"></div>
-        <div class="sel-right"></div>
+        <div id="Selected-data" class="sel-right"> </div>
     </div>
     <div class="container-row">
         <div id="total-credit">Total Credits: 0</div>
