--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     </div>
     <div class="container-row">
         <div id="total-credit">Total Credits: 0</div>
-        <button onclick="onSubmit()">Submit</button>
+        <button onclick="onSubmit()">Select</button>
     </div>
 
 </body>
 <script>
 
 </script>
+
 </html>
